--- a/Project.ipynb
+++ b/Project.ipynb
@@ -186,7 +186,9 @@
     "edited_text_label.place(x=275, y=600)\n",
     "\n",
     "# Start the main loop\n",
-    "root.mainloop()\n"
+    "root.mainloop()\n",
+    "\n",
+    "# Random comment"
    ]
   }
  ],
