them ham chuyen anh am ban duong ban

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -190,6 +190,25 @@
     "\n",
     "# Random comment"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def invert_image(img):\n",
+    "    # Convert the image to a numpy array\n",
+    "    img_np = np.array(img)\n",
+    "    \n",
+    "    # Invert the image\n",
+    "    inverted_img_np = 255 - img_np\n",
+    "    \n",
+    "    # Convert the numpy array back to an image\n",
+    "    inverted_img = Image.fromarray(inverted_img_np)\n",
+    "    \n",
+    "    return inverted_img"
+   ]
   }
  ],
  "metadata": {
