--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,9 +17,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 182\u001b[0m\n\u001b[0;32m    179\u001b[0m edited_text_label\u001b[38;5;241m.\u001b[39mplace(x\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m275\u001b[39m, y\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m600\u001b[39m)\n\u001b[0;32m    181\u001b[0m \u001b[38;5;66;03m# Start the main loop\u001b[39;00m\n\u001b[1;32m--> 182\u001b[0m \u001b[43mroot\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmainloop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    184\u001b[0m \u001b[38;5;66;03m# Random comment\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\LE DANG MINH LONG\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\tkinter\\__init__.py:1505\u001b[0m, in \u001b[0;36mMisc.mainloop\u001b[1;34m(self, n)\u001b[0m\n\u001b[0;32m   1503\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmainloop\u001b[39m(\u001b[38;5;28mself\u001b[39m, n\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m):\n\u001b[0;32m   1504\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Call the mainloop of Tk.\"\"\"\u001b[39;00m\n\u001b[1;32m-> 1505\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtk\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmainloop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Global variables to store the original and edited images\n",
     "original_img = None\n",
@@ -140,6 +153,21 @@
     "    \n",
     "    display_image(edited_img,edited_label)\n",
     "    #y = x * contrast_value; y' = y * contrast_value/current_contrast\n",
+    "\n",
+    "# Function to invert the image\n",
+    "def invert_image():\n",
+    "    # Convert the image to a numpy array\n",
+    "    global edited_img\n",
+    "    img_np = np.array(edited_img)\n",
+    "    \n",
+    "    # Invert the image\n",
+    "    inverted_img_np = 255 - img_np\n",
+    "    \n",
+    "    # Convert the numpy array back to an image\n",
+    "    inverted_img = Image.fromarray(inverted_img_np)\n",
+    "    \n",
+    "    display_image(inverted_img, edited_label)\n",
+    "\n",
     "# Create the main window\n",
     "root = tk.Tk()\n",
     "root.title(\"Scion Image\")\n",
@@ -159,6 +187,7 @@
     "process_menu = Menu(menu_bar,tearoff=0)\n",
     "process_menu.add_command(label=\"Edit Color\", command=open_color_window)\n",
     "process_menu.add_command(label=\"Contrast\", command=open_contrast_window)\n",
+    "process_menu.add_command(label=\"Inverse\", command=invert_image)\n",
     "menu_bar.add_cascade(label=\"Process\",menu=process_menu)\n",
     "\n",
     "root.config(menu=menu_bar)\n",
@@ -189,25 +218,6 @@
     "root.mainloop()\n",
     "\n",
     "# Random comment"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def invert_image(img):\n",
-    "    # Convert the image to a numpy array\n",
-    "    img_np = np.array(img)\n",
-    "    \n",
-    "    # Invert the image\n",
-    "    inverted_img_np = 255 - img_np\n",
-    "    \n",
-    "    # Convert the numpy array back to an image\n",
-    "    inverted_img = Image.fromarray(inverted_img_np)\n",
-    "    \n",
-    "    return inverted_img"
    ]
   }
  ],
