them chuc nang mo anh da mo gan day

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,22 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[21], line 182\u001b[0m\n\u001b[0;32m    179\u001b[0m edited_text_label\u001b[38;5;241m.\u001b[39mplace(x\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m275\u001b[39m, y\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m600\u001b[39m)\n\u001b[0;32m    181\u001b[0m \u001b[38;5;66;03m# Start the main loop\u001b[39;00m\n\u001b[1;32m--> 182\u001b[0m \u001b[43mroot\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmainloop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    184\u001b[0m \u001b[38;5;66;03m# Random comment\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\LE DANG MINH LONG\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\tkinter\\__init__.py:1505\u001b[0m, in \u001b[0;36mMisc.mainloop\u001b[1;34m(self, n)\u001b[0m\n\u001b[0;32m   1503\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmainloop\u001b[39m(\u001b[38;5;28mself\u001b[39m, n\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m):\n\u001b[0;32m   1504\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Call the mainloop of Tk.\"\"\"\u001b[39;00m\n\u001b[1;32m-> 1505\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtk\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmainloop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Global variables to store the original and edited images\n",
     "original_img = None\n",
@@ -51,6 +38,14 @@
     "    current_contrast = 100\n",
     "    # Open a file dialog to select an image file\n",
     "    file_path = filedialog.askopenfilename(filetypes=[(\"Image files\", \"*.jpg;*.jpeg;*.png;*.bmp;*.gif\")])\n",
+    "    \n",
+    "    # Store the file path in a global variable to keep track of the files\n",
+    "    global file_paths\n",
+    "    if 'file_paths' not in globals():\n",
+    "        file_paths = []\n",
+    "    file_paths.append(file_path)\n",
+    "\n",
+    "\n",
     "    if file_path:\n",
     "        # Open the image\n",
     "        original_img = Image.open(file_path)\n",
@@ -58,6 +53,8 @@
     "\n",
     "        # Resize the images to fit the frames\n",
     "        display_image(original_img, original_label)\n",
+    "\n",
+    "\n",
     "\n",
     "# Function to display an image in a specific label\n",
     "def display_image(image, label):\n",
@@ -168,10 +165,46 @@
     "    \n",
     "    display_image(inverted_img, edited_label)\n",
     "\n",
+    "# Function to open a list of recent images\n",
+    "def open_recent():\n",
+    "    if 'file_paths' not in globals() or not file_paths:\n",
+    "        return  # No recent files to open\n",
+    "\n",
+    "    recent_window = Toplevel(root)\n",
+    "    recent_window.title(\"Open Recent\")\n",
+    "    recent_window.geometry(\"500x300\")\n",
+    "\n",
+    "    # Listbox to display recent files\n",
+    "    listbox = tk.Listbox(recent_window)\n",
+    "    listbox.pack(fill=\"both\", expand=True)\n",
+    "\n",
+    "    # Add recent file paths to the listbox\n",
+    "    for path in file_paths:\n",
+    "        listbox.insert(tk.END, path)\n",
+    "\n",
+    "    # Function to open the selected image\n",
+    "    def open_selected_image(event):\n",
+    "        selected_index = listbox.curselection()\n",
+    "        if selected_index:\n",
+    "            file_path = listbox.get(selected_index)\n",
+    "            global original_img, edited_img,current_g,current_b,current_contrast,current_r\n",
+    "            current_r = 100\n",
+    "            current_g = 100\n",
+    "            current_b = 100\n",
+    "            current_contrast = 100\n",
+    "            original_img = Image.open(file_path)\n",
+    "            edited_img = original_img  # Copy original image as the initial edited image\n",
+    "            display_image(original_img, original_label)\n",
+    "            recent_window.destroy()\n",
+    "\n",
+    "    # Bind single-click event to open the selected image\n",
+    "    listbox.bind(\"<ButtonRelease-1>\", open_selected_image)\n",
+    "\n",
     "# Create the main window\n",
     "root = tk.Tk()\n",
     "root.title(\"Scion Image\")\n",
     "root.geometry(\"1200x1200\")\n",
+    "\n",
     "\n",
     "\n",
     "# Create the menu bar\n",
@@ -180,6 +213,9 @@
     "# Add \"File\" menu with \"Open\", \"Edit Color\", and \"Exit\" options\n",
     "file_menu = Menu(menu_bar, tearoff=0)\n",
     "file_menu.add_command(label=\"Open\", command=open_image)\n",
+    "\n",
+    "# Add \"Open recent\" option to the \"File\" menu\n",
+    "file_menu.add_command(label=\"Open Recent\", command=open_recent)\n",
     "\n",
     "file_menu.add_command(label=\"Exit\", command=root.quit)\n",
     "menu_bar.add_cascade(label=\"File\", menu=file_menu)\n",
