--- a/Project.ipynb
+++ b/Project.ipynb
@@ -17,9 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Histogram equalization applied to edited_img.\n"
+     ]
+    }
+   ],
    "source": [
     "# Global variables to store the original and edited images\n",
     "original_img = None\n",
@@ -202,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
