fix highlight error

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,22 +279,19 @@
     "\n",
     "    def draw_histogram(data):\n",
     "        histogram_canvas.delete(\"all\")\n",
-    "        max_height = 200  # Set a static height for the histogram bars\n",
+    "        max_height = 200  \n",
     "\n",
     "        total_pixels = baseline_image.width * baseline_image.height\n",
     "        \n",
-    "        if is_gray_scale(baseline_image):  # Grayscale image\n",
-    "            # max_value = max(data[0])\n",
+    "        if is_gray_scale(baseline_image): \n",
     "            channel_colors = [\"black\"]\n",
     "            channel_offsets = [0]\n",
-    "        elif baseline_image.mode == 'RGB' and not is_gray_scale(baseline_image):  # RGB image\n",
-    "            # max_value = max(max(data[0]), max(data[1]), max(data[2]))\n",
+    "        elif baseline_image.mode == 'RGB' and not is_gray_scale(baseline_image): \n",
     "            channel_colors = [\"red\", \"green\", \"blue\"]\n",
     "            channel_offsets = [-1, 0, 1]\n",
     "        \n",
     "        for channel in range(len(channel_colors)):  \n",
     "            for i in range(bins):\n",
-    "                # bar_height = int(data[channel][i] / max_value * max_height)\n",
     "                bar_height = int(data[channel][i] / (total_pixels/25) * max_height)\n",
     "                x0 = i * bar_width + channel_offsets[channel]\n",
     "                y0 = max_height - bar_height\n",
